--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-client/node_modules
 node_modules
 client/.pnp
 client/.pnp.js
@@ -13,13 +12,13 @@ client/.pnp.js
 /build
 
 # misc
-client/.DS_Store
-client/.env.local
-client/.env.development.local
-client/.env.test.local
-client/.env.production.local
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 .env
 
-client/npm-debug.log*
-client/yarn-debug.log*
-client/yarn-error.log*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
