--- a/client-orb/.gitignore
+++ b/client-orb/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
-.pnp
+/node_modules
+/.pnp
 .pnp.js
 
 # testing
@@ -10,15 +10,14 @@ node_modules
 
 # production
 /build
-package-lock
+
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.env
 
 npm-debug.log*
 yarn-debug.log*
-client/yarn-error.log*
+yarn-error.log*
